--- a/customer_health_dashboard_demo.html
+++ b/customer_health_dashboard_demo.html
@@ -29,7 +29,7 @@
                     class="px-4 py-2 bg-gray-600 text-white font-semibold rounded-lg hover:bg-gray-700 transition shadow-md text-sm">
                     Manage CSMs
                 </button>
-                <button id="login-btn" type="button"
+                <button id="login-btn" type="button" onclick="triggerLogin()"
                     class="px-4 py-2 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 transition shadow-md text-sm">
                     Login for Editing
                 </button>
@@ -301,7 +301,7 @@
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-2xl max-h-[90vh] overflow-y-auto">
             <div class="p-6 border-b border-gray-200 flex justify-between items-center sticky top-0 bg-white">
                 <h3 class="text-xl font-bold text-[#4A5C6A]">Manage CSMs</h3>
-                <button onclick="closeCsmModal()" type="button" class="text-gray-500 hover:text-gray-800">
+                <button type="button" onclick="closeCsmModal()" class="text-gray-500 hover:text-gray-800">
                     <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
                     </svg>
@@ -342,7 +342,7 @@
                 </div>
             </div>
             <div class="p-4 border-t border-gray-200 text-right sticky bottom-0 bg-white">
-                <button onclick="closeCsmModal()" type="button"
+                <button type="button" onclick="closeCsmModal()"
                     class="px-4 py-2 bg-[#4A5C6A] text-white font-semibold rounded-lg hover:bg-[#3D3B38] transition">Close</button>
             </div>
         </div>
