--- a/customer_health_dashboard_demo.html
+++ b/customer_health_dashboard_demo.html
@@ -90,6 +90,18 @@
                             <option value="iso">ISO (2023-12-31)</option>
                         </select>
                     </div>
+                    <div class="w-full sm:w-48">
+                        <label for="timezoneFilter" class="text-sm font-medium text-gray-700 sr-only">Timezone</label>
+                        <select id="timezoneFilter"
+                            class="w-full rounded-lg border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 text-sm">
+                            <option value="local">Local Time</option>
+                            <option value="UTC">UTC</option>
+                            <option value="America/New_York">EST (New York)</option>
+                            <option value="America/Chicago">CST (Chicago)</option>
+                            <option value="America/Denver">MST (Denver)</option>
+                            <option value="America/Los_Angeles">PST (Los Angeles)</option>
+                        </select>
+                    </div>
 
                     <div id="customRangeWrapper" class="hidden w-full sm:w-80 flex gap-4">
                         <div class="w-1/2">
